--- a/DELIVERY.CSS
+++ b/DELIVERY.CSS
@@ -97,8 +97,8 @@ body {
     white-space: nowrap;
     border: 10px ridge #ff0000;   
     padding: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     
   } 
 
@@ -181,8 +181,8 @@ body {
     background-color: rgb(5, 10, 73);
     border-radius: 50px;
     border: 5px ridge #eeff00;
-    font-size: 20px;
-    font-weight: 1000;
+    font-size: 17px;
+    font-weight: bold;
     color: #fbff00;
     text-align: center;
     text-shadow: 1px 2px rgb(255, 0, 0);
@@ -192,8 +192,8 @@ body {
 .backgroundform {
     background-color: #15155a8e;
     padding: 2px;
-    margin-left: 20%;
-    margin-right: 20%; /* Adjusted margin size */
+    margin-left: 10%;
+    margin-right: 10%; /* Adjusted margin size */
     border-radius: 4px;
     border: 10px ridge rgb(255, 0, 0);
 }
@@ -232,7 +232,7 @@ body {
     background-color: rgb(5, 10, 73);
     border-radius: 50px;
     border: 5px ridge #eeff00;
-    font-size: 25px;
+    font-size: 17px;
     font-weight: 1000;
     color: #fbff00;
     text-align: center;
