--- a/RESERVATION.CSS
+++ b/RESERVATION.CSS
@@ -96,8 +96,8 @@ body {
     background-color: #ff000031;
     border: 10px ridge #ff0000;
     padding: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .scrollable {
@@ -188,8 +188,8 @@ body {
 .backgroundform {
     background-color: #15155a8e;
     padding: 2px;
-    margin-left: 20%;
-    margin-right: 20%; /* Adjusted margin size */
+    margin-left: 10%;
+    margin-right: 10%; /* Adjusted margin size */
     border-radius: 4px;
     border: 10px ridge rgb(255, 0, 0);
 }
@@ -203,8 +203,8 @@ body {
     background-color: rgb(5, 10, 73);
     border-radius: 50px;
     border: 5px ridge #eeff00;
-    font-size: 20px;
-    font-weight: 1000;
+    font-size: 16px;
+    font-weight: bold;
     color: #fbff00;
     text-align: center;
     text-shadow: 1px 2px rgb(255, 0, 0);
@@ -237,7 +237,7 @@ body {
 }
 
 .reserve {
-    margin-top: 10px; /* Adjusted margin-top */
+    margin-top: 20px; /* Adjusted margin-top */
     margin-left: auto;
     margin-right: auto;
     width: 40%; /* Adjusted width */
@@ -246,7 +246,7 @@ body {
     border-radius: 50px;
     border: 5px ridge #eeff00;
     font-size: 25px;
-    font-weight: 1000;
+    font-weight: bold;
     color: #fbff00;
     text-align: center;
     text-shadow: 1px 2px rgb(255, 0, 0);
