--- a/DELIVERY.CSS
+++ b/DELIVERY.CSS
@@ -172,30 +172,31 @@ body {
     outline: 5px dotted rgb(201, 204, 43); 
 }
 
-.fill_up {
-    margin-top: 10px; /* Adjusted margin-top */
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%; /* Adjusted width */
-    outline: 5px dotted rgb(201, 204, 43);
-    background-color: rgb(5, 10, 73);
-    border-radius: 50px;
-    border: 5px ridge #eeff00;
-    font-size: 17px;
-    font-weight: bold;
-    color: #fbff00;
-    text-align: center;
-    text-shadow: 1px 2px rgb(255, 0, 0);
-    padding: 10px;
-}
-
 .backgroundform {
     background-color: #15155a8e;
     padding: 2px;
     margin-left: 10%;
     margin-right: 10%; /* Adjusted margin size */
-    border-radius: 4px;
+    border-radius: 25px;
     border: 10px ridge rgb(255, 0, 0);
+}
+
+.fill_up {
+    margin-top: 20px; /* Adjusted margin-top */
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 50%; /* Adjusted width */
+    outline: 5px dotted rgb(201, 204, 43);
+    background-color: rgb(5, 10, 73);
+    border-radius: 50px;
+    border: 5px ridge #eeff00;
+    font-size: 20px;
+    font-weight: 1000;
+    color: #fbff00;
+    text-align: center;
+    text-shadow: 1px 2px rgb(255, 0, 0);
+    padding: 10px;
 }
 
 .client {
@@ -224,15 +225,16 @@ body {
 }
 
 .Order {
-    margin-top: 10px; /* Adjusted margin-top */
+    margin-top: 20px; /* Adjusted margin-top */
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
     width: 40%; /* Adjusted width */
     outline: 5px dotted rgb(201, 204, 43);
     background-color: rgb(5, 10, 73);
     border-radius: 50px;
     border: 5px ridge #eeff00;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 1000;
     color: #fbff00;
     text-align: center;
@@ -242,7 +244,7 @@ body {
 
 .Orderfood, .comments {
     margin-bottom: 10px; /* Adjust margin bottom */
-    margin-left: auto; /* Align to the left */
+    margin-left: 30%; /* Align to the left */
     margin-right: auto; /* Align to the right */
     width: 100%; /* Set the width */
     padding: 10px;
@@ -264,6 +266,7 @@ body {
     box-sizing: border-box;
     border: 2px solid #2142ad;
     border-radius: 10px;
+
 }
 
 .button-container {
@@ -283,7 +286,9 @@ body {
 
 .submit {
     background-color: rgb(58, 230, 58);
-    border: 10px ridge rgb(46, 185, 46);
+    border: 8px solid rgb(46, 185, 46);
+    outline: 5px dotted rgb(201, 204, 43);
+    
     
 }
 
@@ -295,7 +300,8 @@ body {
 
 .reset {
     background-color: rgb(230, 58, 58);
-    border: 10px ridge rgb(179, 3, 3);
+    border: 8px solid rgb(179, 3, 3);
+    outline: 5px dotted rgb(201, 204, 43);
 }
 
 .reset:hover {
