--- a/MENUS.CSS
+++ b/MENUS.CSS
@@ -91,13 +91,37 @@ body {
 }
 
 .tagl{
-    background-color: #5e151598;
+    background-color: #5e15158f;
     margin: 10px;
+    margin-top: 20px;
     color: #9b0505;
     border: 10px ridge #ff0000;
-    margin-left: 50;
-    margin-right: 50;
 
+}
+
+.tagline3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: auto;
+    text-align: center;
+}
+
+.tagline3 {
+    font-size: 20px;
+    font-weight: 1000;
+    font-family: Arial;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 1px 4px rgb(0, 0, 0); 
+}
+
+.tagline2 {
+    font-size: 18px;
+    font-weight: bolder;
+    font-family: Arial;
+    text-align: center;
+    color: #eeff00;
+    text-shadow: 1px 4px rgb(0, 0, 0);  
 }
 
 .tagline {
