--- a/style.css
+++ b/style.css
@@ -99,19 +99,33 @@ body {
 .tagl{
     background-color: #5e15158f;
     margin: 10px;
+    margin-top: 20px;
     color: #9b0505;
     border: 10px ridge #ff0000;
 
 }
 
-.tagline {
-    font-size: 21px;
+.tagline1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.tagline1 {
+    font-size: 20px;
     font-weight: 1000;
     font-family: Arial;
     text-align: center;
     color: #ffffff;
-    text-shadow: 1px 4px rgb(0, 0, 0);
-    
+    text-shadow: 1px 4px rgb(0, 0, 0); 
+}
+
+.tagline2 {
+    font-size: 18px;
+    font-weight: bolder;
+    font-family: Arial;
+    text-align: center;
+    color: #eeff00;
+    text-shadow: 1px 4px rgb(0, 0, 0);  
 }
 
 .scroll-container {
@@ -182,7 +196,7 @@ body {
 .about{
     background-color: #150846c5;
     font-weight: 1000;
-    font-size: 40;
+    font-size: 40px;
     font-family: Arial;
     margin: 10px;
     text-align: center;
@@ -197,12 +211,12 @@ body {
     margin-left: 5%;
     margin-right: 5%;
     text-align: justify;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: bold;
 }
 .about1{
     background-color: #150846c5;
-    font-weight: 1000;
-    font-size: auto;
-    text-align: justify;
     color: #ffffff;
     font-family: Arial;
     padding: 10px;
@@ -376,6 +390,7 @@ body {
     text-align: center;
     padding-bottom: 5%;
     outline: 5px dotted rgb(201, 204, 43);
+    line-height: 1.5;
 }
 
 .review-item .reviewer-name {
