--- a/DELIVERY.CSS
+++ b/DELIVERY.CSS
@@ -155,7 +155,8 @@ body {
 }
 
 .image-container img:hover {
-    transform: scale(1.3); 
+    transform: scale(1.2); 
+    transition: transform .5s;
 }
 
 .menu-title {
@@ -260,8 +261,8 @@ body {
     margin-bottom: 5px; /* Adjust margin bottom */
 }
 
-.options_choose, .e_comments textarea {
-    width: 80%; /* Adjust width */
+.options_choose, .e_comments textarea{
+    width: calc(100%); /* Adjust width */
     padding: 8px;
     box-sizing: border-box;
     border: 2px solid #2142ad;
