--- a/MENUS.CSS
+++ b/MENUS.CSS
@@ -164,18 +164,9 @@ body {
 
 .scroll-container img {
     padding:  1px;
-    height: 400;
-    width: 400;
-    transition: transform .2s;
     outline: 5px dotted rgb(201, 204, 43); 
 }
 
-.scroll-container img:hover {
-    transform: scale(1.3); /*zoom*/
-    width: 400px;
-    height: 400px;
-    overflow: visible;
-}
 
 .menu-item {
     display: inline-flex;
@@ -190,14 +181,15 @@ body {
 }
 
 .image-container img {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     padding: 1px;
-    transition: transform .2s;
+    
 }
 
 .image-container img:hover {
-    transform: scale(1.3); /*zoom*/
+    transform: scale(1.2); /*zoom*/
+    transition: .5s;
 }
 
 .menu-div {
